--- a/templates/form_posting_story.html
+++ b/templates/form_posting_story.html
@@ -31,7 +31,7 @@
   <script>
     ClassicEditor
         .create( document.querySelector( '#textarea'),{
-          toolbar: ['bold', 'italic', 'link', 'undo', 'redo', 'numberedList', 'bulletedList','alignment'],
+          toolbar: ['bold', 'italic', 'link', 'undo', 'redo', 'numberedList', 'bulletedList'],
         })
         .catch( error => {
             console.error( error );
