--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -38,9 +38,7 @@
                         </div>
                         <div class="form-group">
                             <label for="tentang-saya">Tentang Saya</label>
-                            <textarea required class="form-control" name="tentang-saya" id="exampleFormControlTextarea1" rows="10">
-                                {{tentang_saya}}
-                            </textarea>
+                            <textarea required class="form-control" name="tentang-saya" id="exampleFormControlTextarea1" rows="10">{{tentang_saya}}</textarea>
                         </div>
                         <div class="form-group">
                             <label for="profile-picture">Upload Foto Profil</label>
