add icons to all the buttons

--- a/templates/user/user_profile.html
+++ b/templates/user/user_profile.html
@@ -42,7 +42,7 @@
                     </div>
                     {%if user == request.user %}
                         <div class="mb-3">
-                            <a href="/user/{{user.username}}/profile/edit" class="btn btn-primary">Edit Profil</a>
+                            <a href="/user/{{user.username}}/profile/edit" class="btn btn-primary"><i class="fas fa-edit"></i> Edit Profil</a>
                         </div>
                     {% endif %}
                     <h4 class="card-title">Cerita</h4>
