--- a/templates/form_posting_story.html
+++ b/templates/form_posting_story.html
@@ -19,13 +19,13 @@
           {% include 'input_tag.html' %}
         {% endif %}
       </div>
-      <button type="button" class="btn btn-primary mt-1" id="add-tag">Tambah tag</button>
+      <button type="button" class="btn btn-primary mt-1 " id="add-tag"><i class="fas fa-plus"></i> Tambah tag</button>
     </div>
     <div class="form-group">
       <textarea class="form-control" name="content" id="textarea" rows="50">{% if story %}{{story.content}}{% endif %}</textarea>
     </div>
     <div class="form-group" style="text-align: right;">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary"><i class="fas fa-file"></i> Submit</button>
     </div>
   </form>
   <script>
