--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -45,7 +45,7 @@
                             <input type="file" name="profile-picture" id="profile-picture">
                         </div>    
                         <div class="form-group" style="text-align: right;">
-                            <button type="submit" class="btn btn-primary">Simpan</button>
+                            <button type="submit" class="btn btn-primary"><i class="fas fa-file"></i> Simpan</button>
                           </div>
                       </form>
                 </div>
